RESOLVED FIXED309428
Fix the internal iOS build on versions of the SDK with NSTextTable_Private.h
https://bugs.webkit.org/show_bug.cgi?id=309428
Summary Fix the internal iOS build on versions of the SDK with NSTextTable_Private.h
Wenson Hsieh
Reported 2026-03-07 16:07:40 PST
Attachments
Wenson Hsieh
Comment 1 2026-03-07 16:13:14 PST
EWS
Comment 2 2026-03-07 18:26:55 PST
Committed 308877@main (631a95192ae7): <https://commits.webkit.org/308877@main> Reviewed commits have been landed. Closing PR #60140 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.