Fix the internal iOS build on versions of the SDK with NSTextTable_Private.h https://bugs.webkit.org/show_bug.cgi?id=309428 rdar://171870586

Reviewed by Jonathan Bedard.

Fix the iOS build by pulling these symbols from internal SDK headers when possible, with a fallback
to forward declarations. This will keep the build passing in the following 3 configurations:

• The internal iOS SDK after the changes in rdar://162691202
• The internal iOS SDK before the changes in rdar://162691202
• The latest iOS 26 SDK

* Tools/TestRunnerShared/spi/UIKitSPIForTesting.h:

Canonical link: https://commits.webkit.org/308877@main